Update toolkit-intellij-subplugin.gradle.kts