@@ -2,10 +2,13 @@
 // SPDX-License-Identifier: Apache-2.0
 
 import org.eclipse.jgit.api.Git
+import org.gradle.internal.os.OperatingSystem
 import org.gradle.testing.jacoco.plugins.JacocoTaskExtension.Output
 import org.jetbrains.intellij.tasks.DownloadRobotServerPluginTask
+import org.jetbrains.intellij.tasks.PatchPluginXmlTask
 import org.jetbrains.intellij.tasks.RunIdeForUiTestTask
 import org.jetbrains.intellij.utils.OpenedPackages
+import software.aws.toolkits.gradle.buildMetadata
 import software.aws.toolkits.gradle.ciOnly
 import software.aws.toolkits.gradle.findFolders
 import software.aws.toolkits.gradle.intellij.IdeFlavor
@@ -85,40 +88,23 @@ intellij {
     plugins.set(toolkitIntelliJ.productProfile().map { it.plugins.toMutableList() })
 
     downloadSources.set(toolkitIntelliJ.ideFlavor.map { it == IdeFlavor.IC && !project.isCi() })
-    instrumentCode.set(toolkitIntelliJ.ideFlavor.map { it != IdeFlavor.RD })
+    instrumentCode.set(toolkitIntelliJ.ideFlavor.map { it == IdeFlavor.IC || it == IdeFlavor.IU })
 }
 
 tasks.jar {
     archiveBaseName.set(toolkitIntelliJ.ideFlavor.map { "aws-toolkit-jetbrains-$it" })
 }
 
-tasks.patchPluginXml {
+tasks.withType<PatchPluginXmlTask>().all {
     sinceBuild.set(toolkitIntelliJ.ideProfile().map { it.sinceVersion })
     untilBuild.set(toolkitIntelliJ.ideProfile().map { it.untilVersion })
 }
 
 // attach the current commit hash on local builds
 if (!project.isCi()){
-    val buildMetadata = try {
-        val git = Git.open(project.rootDir)
-        val currentShortHash = git.repository.findRef("HEAD").objectId.abbreviate(7).name()
-        val isDirty = git.status().call().hasUncommittedChanges()
-
-        buildString {
-            append(currentShortHash)
-
-            if (isDirty) {
-                append(".modified")
-            }
-        }
-    } catch(e: IOException) {
-        logger.warn("Could not determine current commit", e)
-
-        "unknownCommit"
-    }
-
-    tasks.patchPluginXml {
-        version.set("${version.get()}+$buildMetadata")
+    val buildMetadata = buildMetadata()
+    tasks.withType<PatchPluginXmlTask>().all {
+        version.set(intellij.version.map { "$it+$buildMetadata" })
     }
 
     tasks.buildPlugin {
@@ -135,7 +121,14 @@ tasks.buildSearchableOptions {
 val openedPackages = OpenedPackages + listOf(
     // very noisy in UI tests
     "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED",
-)
+) + with(OperatingSystem.current()) {
+    when {
+        isWindows -> listOf(
+            "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
+        )
+        else -> emptyList()
+    }
+}
 
 tasks.withType<Test>().all {
     systemProperty("log.dir", intellij.sandboxDir.map { "$it-test/logs" }.get())
